# hearsay

./: .gitignore  Cargo.toml
crates/audio/: Cargo.toml
crates/audio/src/: device.rs  lib.rs  mic.rs  resample.rs
crates/core/: Cargo.toml
crates/core/src/: audio.rs  ids.rs  lib.rs  segment.rs  session.rs  speaker.rs  summary.rs
crates/diarize/: Cargo.toml
crates/diarize/src/: lib.rs
crates/hearsayd/: Cargo.toml
crates/hearsayd/src/: config.rs  error.rs  lib.rs  main.rs  session_manager.rs  state.rs  summarize_child.rs  tray.rs
crates/hearsayd/src/routes/: audio.rs  config.rs  devices.rs  health.rs  mod.rs  sessions.rs  static_files.rs  ws.rs
crates/hearsayd/tests/: api.rs  ws.rs
crates/meet-bridge/: Cargo.toml
crates/meet-bridge/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: audio_writer.rs  db.rs  enums.rs  lib.rs  migrations.rs
crates/storage/tests/: integration.rs
crates/summarize/: Cargo.toml
crates/summarize/src/: lib.rs  model.rs  prompt.rs
crates/transcribe/: Cargo.toml
crates/transcribe/src/: chunker.rs  lib.rs  model.rs  worker.rs
crates/transcribe/tests/: whisper.rs
scripts/: bundle-macos.sh  setup-models.sh
ui-frontend/: index.html  package-lock.json  package.json  vite.config.ts
ui-frontend/src/: App.svelte
ui-frontend/src/lib/: api.ts  format.ts  types.ts
ui-frontend/src/routes/: SessionDetail.svelte  SessionsList.svelte  Settings.svelte
