[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/audio",
    "crates/transcribe",
    "crates/summarize",
    "crates/storage",
    "crates/meet-bridge",
    "crates/diarize",
    "crates/hearsayd",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Local crates
hearsay-core = { path = "crates/core" }
hearsay-audio = { path = "crates/audio" }
hearsay-transcribe = { path = "crates/transcribe" }
hearsay-summarize = { path = "crates/summarize" }
hearsay-storage = { path = "crates/storage" }
hearsay-meet-bridge = { path = "crates/meet-bridge" }
hearsay-diarize = { path = "crates/diarize" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
futures-util = "0.3"
async-trait = "0.1"

# HTTP server
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Errors
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Common
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
bytes = "1"
parking_lot = "0.12"
once_cell = "1"
dirs = "5"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

[workspace.lints.rust]
unsafe_code = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
