[package]
name = "hearsay-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hearsay-core.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
serde.workspace = true

[lints]
workspace = true
