[package]
name = "hearsay-diarize"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hearsay-core.workspace = true
hearsay-storage.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
