[package]
name = "hearsay-summarize"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hearsay-core.workspace = true
hearsay-storage.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
parking_lot.workspace = true
# Needed for the per-token UTF-8 decoder llama-cpp-2's API requires.
encoding_rs = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { version = "0.1" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
dirs = { workspace = true }

[lints]
workspace = true
